# relibc

./: .gitignore  Cargo.toml  Makefile  README.md  solution.md
c-rt/: Cargo.toml
generic-rt/: Cargo.toml
generic-rt/src/: lib.rs
include/: ctype.h  dirent.h  err.h  error.h  fcntl.h  fnmatch.h  inttypes.h  libgen.h  malloc.h  netdb.h  regex.h  stdlib.h  string.h  strings.h  syslog.h
include/arpa/: inet.h
include/bits/: stdio.h
include/bits/sys/: stat.h
include/netinet/: in.h
include/sys/: mman.h  select.h  socket.h  stat.h
ld_so/: Cargo.toml
ld_so/ld_script/: aarch64-unknown-redox.ld  riscv64gc-unknown-redox.ld
ld_so/src/: allocator.rs  c_rt.rs  dso.rs  gnu_hash.rs  header.rs  lib.rs  linker.rs  linux_parity.rs  reloc.rs  tcb.rs  verify.rs  versioning.rs
macros/: Cargo.toml
macros/src/: lib.rs
platform/: Cargo.toml
platform/src/: lib.rs  types.rs
redox-rt/: Cargo.toml
redox-rt/src/: auxv_constants.rs  c_rt.rs  lib.rs  proc.rs  signal.rs  start.rs  thread.rs
redox-rt/src/arch/: aarch64.rs  riscv64.rs  x86_64.rs
redox-rt/tests/: tls.rs
src/: lib.rs  start.rs
src/crt0/src/: lib.rs
src/crti/src/: lib.rs
src/header/: _fenv.rs  mod.rs
src/header/_fenv/: mod.rs  (+2 more)
src/io/: buffered.rs  mod.rs  zerocopy.rs
src/ld_so/: dso.rs  linker.rs  mod.rs  tcb.rs
src/platform/: auxv_defs.rs  mod.rs  types.rs
src/sync/: barrier.rs  cond.rs  mod.rs  mutex.rs  pthread_mutex.rs  rwlock.rs
tests/: Makefile  fenv.c  run_tests.sh
tests/expected/: fenv.stdout
tests/pthread/: tls.c
tests/wchar/: mbrtowc_restart.c  wcstod_overflow.c  wmem.c
(+42 files in other folders)
