[package]
name = "redox-rt"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Libc-independent runtime for Redox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
goblin = { version = "0.7", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
plain = "0.2"
redox_syscall = "0.5.13"

generic-rt = { path = "../generic-rt", features = ["expect-tls-free"] }
c-rt = { path = "../c-rt", optional = true }
relibc_ld_so = { package = "relibc", path = "../../src" } # Added dependency

[features]
proc = []
c-rt-test = ["c-rt"]
default = ["proc"]

[[test]]
name = "tls"
path = "tests/tls.rs"
required-features = ["proc"]
